--- a/image_slider/index.html
+++ b/image_slider/index.html
@@ -44,47 +44,47 @@ body {
 
 
 .slide:first-child {
-  background: url("1.png") no-repeat
+  background: url("1.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("2.png") no-repeat
+  background: url("2.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("3.png") no-repeat
+  background: url("3.jpg") no-repeat
     center top/cover;
 }
 
   .slide:nth-child(4) {
-  background: url("4.png") no-repeat
+  background: url("4.jpg") no-repeat
     center top/cover;
 }
 
   .slide:nth-child(5) {
-  background: url("5.png") no-repeat
+  background: url("5.jpg") no-repeat
     center top/cover;
 }
 
   .slide:nth-child(6) {
-  background: url("6.png") no-repeat
+  background: url("6.jpg") no-repeat
     center top/cover;
 }
 
   .slide:nth-child(7) {
-  background: url("7.png") no-repeat
+  background: url("7.jpg") no-repeat
     center top/cover;
 }
 
   .slide:nth-child(8) {
-  background: url("8.png") no-repeat
+  background: url("8.jpg") no-repeat
     center top/cover;
 }
 
   .slide:nth-child(9) {
-  background: url("9.png") no-repeat
+  background: url("9.jpg") no-repeat
     center top/cover;
 }
   
