--- a/image_slider/index.html
+++ b/image_slider/index.html
@@ -87,7 +87,16 @@ body {
   background: url("9.jpg") no-repeat
     center top/cover;
 }
+
+  .slide:nth-child(10) {
+  background: url("10.jpg") no-repeat
+    center top/cover;
+}
   
+    .slide:nth-child(11) {
+  background: url("11.jpg") no-repeat
+    center top/cover;
+}
 
 .buttons button#prev {
   position: absolute;
@@ -148,7 +157,8 @@ body {
     <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
-
+    <div class="slide"></div>
+    <div class="slide"></div>
   </div>
   <div class="buttons">
     <button id="prev"><i class="fas fa-arrow-left"></i></button>
